# mux-tools

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tree-config.sample.yaml
.cursor/rules/: commands.mdc  typing.mdc
examples/: tmux_demo.py
scripts/: setup.py
src/mux/: __init__.py  _demo.py  base.py  cli.py  session.py  util.py  window.py
src/tree/: __init__.py  config.py  env.py  main.py  tmux.py
src/wt_tools/: __init__.py  base.py  cli.py  demo.py  session.py  util.py  window.py
src/your_project_name/: __init__.py  demo.py  main.py
tests/: test_cli.py  test_demo.py  test_main.py
